@@ -41,3 +41,5 @@ progression.action.furnace=Furnace
 progression.action.breakblock=Break Block
 progression.action.harvestdrop=Harvest Drop
 progression.action.entitydrop=Entity Drop
+
+achievement.criteria=Criteria Complete
